refactor : 재배포를 위한 리팩토링 및 설정 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,7 @@ spring:
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
-app:
-  api:
-    url: https://dsrkzpzrzxqkarjw.tunnel-pt.elice.io
+
+#app:
+#  api:
+#    url: https://dsrkzpzrzxqkarjw.tunnel-pt.elice.io
